# west

./: .gitignore  readme.md  server.py  todo.md  west-cli  west_launch.sh
rosnode/west_tools/: CMakeLists.txt  package.xml
rosnode/west_tools/launch/: west_tools_env.launch
rosnode/west_tools/src/: west_tools_node.py
rosnode/west_tools/srv/: KillNode.srv  NodeList.srv  PackList.srv  RunNode.srv  ServiceList.srv  WNodeInput.srv  WNodeList.srv
www/: index.html
www/css/: styles.css
www/js/: app.js  utility.js
www/lib/: roslib.js
